Toggling multiple times AdwLeaflet's "can-unfold" breaks the folding
When toggling multiple times the property "can-unfold" of a AdwLeaflet the folding breaks:
Steps to reproduce the issue:
- Open any application that contains a AdwLeaflet.
- Resize the window so that the leaflet is NOT folded.
- Open the inspector and select the AdwLeaflet.
- In the list of properties, toggle three times the property "can-unfold".
Edited by Pablo Sánchez Rodríguez