leaflet: Correctly skip mode transition with can-unfold=false

Fixes https://gitlab.gnome.org/GNOME/libadwaita/-/issues/620


(cherry picked from commit 08af02ec520ec3537a1ec6a174745e36995a0af2)